--- a/src/index.html
+++ b/src/index.html
@@ -8,42 +8,42 @@
     <div class="main-screen">
         <div class="wrapper">
             <div class="catalog catalog_home flex">
-                <a href="#" class="catalog__item">
+                <a href="#" class="catalog__item catalog__item_pizza">
                     <div class="catalog__caption">Пицца</div>
                     <img class="catalog__img" src="images/catalog/pizza.png" alt="пицца">
                 </a>
-                <a href="#" class="catalog__item">
+                <a href="#" class="catalog__item catalog__item_pie">
                     <div class="catalog__caption">Пироги</div>
-                    <img class="catalog__img" src="images/catalog/fruit-895005_1920.png" alt="пицца">
+                    <img class="catalog__img" src="images/catalog/fruit-895005_1920.png" alt="Пироги">
                 </a>
-                <a href="#" class="catalog__item">
+                <a href="#" class="catalog__item catalog__item_cakes">
                     <div class="catalog__caption">Торты в ассортименте</div>
-                    <img class="catalog__img" src="images/catalog/cakes.png" alt="пицца">
+                    <img class="catalog__img" src="images/catalog/cakes.png" alt="Торты">
                 </a>
-                <a href="#" class="catalog__item">
+                <a href="#" class="catalog__item catalog__item_bread">
                     <div class="catalog__caption">Тандыр и хлеба
                     </div>
-                    <img class="catalog__img" src="images/catalog/bread.png" alt="пицца">
+                    <img class="catalog__img" src="images/catalog/bread.png" alt="Тандыр и хлеба">
                 </a>
-                <a href="#" class="catalog__item">
+                <a href="#" class="catalog__item catalog__item_bakery">
                     <div class="catalog__caption">Вкусная выпечка</div>
-                    <img class="catalog__img" src="images/catalog/basket-2816374_1920.png" alt="пицца">
+                    <img class="catalog__img" src="images/catalog/basket-2816374_1920.png" alt="выпечка">
                 </a>
-                <a href="#" class="catalog__item">
+                <a href="#" class="catalog__item catalog__item_sweet">
                     <div class="catalog__caption">Сладенькое</div>
-                    <img class="catalog__img" src="images/catalog/sweet.png" alt="пицца">
+                    <img class="catalog__img" src="images/catalog/sweet.png" alt="Сладенькое">
                 </a>
-                <a href="#" class="catalog__item">
+                <a href="#" class="catalog__item catalog__item_mini">
                     <div class="catalog__caption">Мини-версии</div>
-                    <img class="catalog__img" src="images/catalog/cupcake-2724786_1920.png" alt="пицца">
+                    <img class="catalog__img" src="images/catalog/cupcake-2724786_1920.png" alt="Мини-версии">
                 </a>
-                <a href="#" class="catalog__item">
+                <a href="#" class="catalog__item catalog__item_candy">
                     <div class="catalog__caption">Candy bar</div>
-                    <img class="catalog__img" src="images/catalog/candy-bar.png" alt="пицца">
+                    <img class="catalog__img" src="images/catalog/candy-bar.png" alt="Candy bar">
                 </a>
-                <a href="#" class="catalog__item">
+                <a href="#" class="catalog__item catalog__item_drinks">
                     <div class="catalog__caption">Напитки</div>
-                    <img class="catalog__img" src="images/catalog/drinks.png" alt="пицца">
+                    <img class="catalog__img" src="images/catalog/drinks.png" alt="Напитк">
                 </a>
                 <div class="catalog__leaks"></div>
             </div>
@@ -83,5 +83,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js?ver=2.2'></script>
 <script src="/js/main.js"></script>
 </html> 
