--- a/src/catalog.html
+++ b/src/catalog.html
@@ -6,18 +6,308 @@
     @@include('template/menu.html')
     <div class="main-screen">
         <div class="wrapper">
+            <ol itemscope itemtype="http://schema.org/BreadcrumbList" class="breadcrumbs">
+                <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+                    <a itemscope itemtype="http://schema.org/Thing" itemprop="item" href="/" class="breadcrumbs_home">
+                        <span itemprop="name">Главная</span>
+                    </a>
+                    <meta itemprop="position" content="1"/>
+                </li>
+                <li class="slash"><span>/</span></li>
+                <li class="unactive"><span></span>Каталог</li>
+            </ol>
             <h1 class="inner-caption">Торты в ассортименте</h1>
             <div class="inner-caption_small">Изделия на фото могут отличаться от тех, что на витрине</div>
             <div class="catalog-page__sort flex">
                 <div class="select-caption">Сортировать по:</div>
-                <select>
-                    <option>Цена (самая низкая)</option>
-                    <option>Цена (самая высокая)</option>
-                </select>
+				<div class="select select_price">
+				   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
+				   <div class="select__field select__field_price">Цена (самая низкая)</div>
+				   <ul>
+					   <li>Цена (самая низкая)</li>
+					   <li>Цена (самая высокая)</li>
+				   </ul>
+				</div>
             </div>
-            
-        </div>
-        
+            <div class="catalog-page__content flex">
+                <div class="catalog-filters">
+                    <div class="catalog-filters__caption">Подбор параметров</div>
+                    <div class="catalog-filters__question">Цена</div>
+                    <div class="catalog-filters__answer">
+                    	<div class="flex_between">
+							<label>
+								<span class="ui-slider-price__label">От</span>
+								<input class="ui-slider-price__input" type="text" id="amount1_input" readonly>
+							</label>
+							<label>
+								<span class="ui-slider-price__label">До</span>
+								<input class="ui-slider-price__input" type="text" id="amount2_input" readonly>
+							</label> 
+						</div>    
+						<div class="ui-slider-price" id="slider-price">
+							<div class="ui-slider-range ui-slider-range_price ui-corner-all ui-widget-header"></div>
+							<span tabindex="0" class="ui-slider-handle ui-slider-handle_price ui-corner-all ui-state-default">
+								<span class="ui-slider-price_amount" id="amount1"></span>
+							</span>
+							<span tabindex="0" class="ui-slider-handle ui-slider-handle_price ui-corner-all ui-state-default">
+								<span class="ui-slider-price_amount" id="amount2"></span>
+							</span>
+						</div>
+                    </div>
+                    <div class="catalog-filters__question">Фильтр</div>
+                    <div class="catalog-filters__answer">
+                    	<div class="flex">
+							<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>1 ярус</div>       
+							</label>
+							<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>2 яруса</div>       
+							</label>
+                  			<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>3 яруса</div>       
+							</label>
+                   		</div>
+                    </div>
+                    <div class="catalog-filters__question">Фильтр</div>
+                    <div class="catalog-filters__answer">
+                    	<div class="flex">
+							<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>1 ярус</div>       
+							</label>
+							<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>2 яруса</div>       
+							</label>
+                  			<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>3 яруса</div>       
+							</label>
+                   		</div>
+                    </div>
+                    <div class="catalog-filters__question">Фильтр</div>
+                    <div class="catalog-filters__answer">
+                    	<div class="flex">
+							<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>1 ярус</div>       
+							</label>
+							<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>2 яруса</div>       
+							</label>
+                  			<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>3 яруса</div>       
+							</label>
+                   		</div>
+                    </div>
+                    <div class="catalog-filters__question">Фильтр</div>
+                    <div class="catalog-filters__answer">
+                    	<div class="flex">
+							<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>1 ярус</div>       
+							</label>
+							<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>2 яруса</div>       
+							</label>
+                  			<label class="checkbox-label">
+								<input type="checkbox" id="" name="" value="">  
+								<div>3 яруса</div>       
+							</label>
+                   		</div>
+                    </div>
+                    <a href="#" class="button button_blue catalog-filters__button">Применить</a>
+                </div>
+                <div class="catalog-plates flex">
+                    <div class="catalog-plates__plate-wr">
+                        <div class="catalog-plates__plate">
+                            <a href="#" class="catalog-plates__photo">
+                            	<div class="catalog-plates__composition">
+                            		<div class="catalog-plates__composition-caption">Состав:</div>
+                            		<div>Сочетание нежного бархатного бисквита с добавлением свекольного сока и сырного крема</div>
+                            	</div>
+                            </a>
+                            <div class="catalog-plates__info">
+                                <a href="#" class="catalog-plates__name">Торт "Красный бархат"</a> 
+                                <div class="catalog-plates__filters flex">
+                                    <div class="select select_plates">
+									   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
+									   <div class="select__field select__field_plates">Combo1</div>
+									   <ul>
+										   <li>Combo1</li>
+										   <li>Combo2</li>
+									   </ul>
+									</div>
+                                    <div>
+										<input type="number" class="numb" id="1" value="3">
+									</div>
+                                    <div class="catalog-plates__price">1090 р</div>
+                                </div>
+                                <div class="flex">
+                                    <a href="#" class="catalog-plates__button button button_blue">в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="catalog-plates__plate-wr">
+                        <div class="catalog-plates__plate">
+                            <a href="#" class="catalog-plates__photo">
+                            	<div class="catalog-plates__composition">
+                            		<div class="catalog-plates__composition-caption">Состав:</div>
+                            		<div>Сочетание нежного бархатного бисквита с добавлением свекольного сока и сырного крема</div>
+                            	</div>
+                            </a>
+                            <div class="catalog-plates__info">
+                                <a href="#" class="catalog-plates__name">Торт "Красный бархат"</a> 
+                                <div class="catalog-plates__filters flex">
+                                    <div class="select select_plates">
+									   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
+									   <div class="select__field select__field_plates">Combo1</div>
+									   <ul>
+										   <li>Combo1</li>
+										   <li>Combo2</li>
+									   </ul>
+									</div>
+                                    <div>
+										<input type="number" class="numb" id="1" value="3">
+									</div>
+                                    <div class="catalog-plates__price">1090 р</div>
+                                </div>
+                                <div class="flex">
+                                    <a href="#" class="catalog-plates__button button button_blue">в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="catalog-plates__plate-wr">
+                        <div class="catalog-plates__plate">
+                            <a href="#" class="catalog-plates__photo">
+                            	<div class="catalog-plates__composition">
+                            		<div class="catalog-plates__composition-caption">Состав:</div>
+                            		<div>Сочетание нежного бархатного бисквита с добавлением свекольного сока и сырного крема</div>
+                            	</div>
+                            </a>
+                            <div class="catalog-plates__info">
+                                <a href="#" class="catalog-plates__name">Торт "Красный бархат"</a> 
+                                <div class="catalog-plates__filters flex">
+                                    <div class="select select_plates">
+									   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
+									   <div class="select__field select__field_plates">Combo1</div>
+									   <ul>
+										   <li>Combo1</li>
+										   <li>Combo2</li>
+									   </ul>
+									</div>
+                                    <div>
+										<input type="number" class="numb" id="1" value="3">
+									</div>
+                                    <div class="catalog-plates__price">1090 р</div>
+                                </div>
+                                <div class="flex">
+                                    <a href="#" class="catalog-plates__button button button_blue">в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="catalog-plates__plate-wr">
+                        <div class="catalog-plates__plate">
+                            <a href="#" class="catalog-plates__photo">
+                            	<div class="catalog-plates__composition">
+                            		<div class="catalog-plates__composition-caption">Состав:</div>
+                            		<div>Сочетание нежного бархатного бисквита с добавлением свекольного сока и сырного крема</div>
+                            	</div>
+                            </a>
+                            <div class="catalog-plates__info">
+                                <a href="#" class="catalog-plates__name">Торт "Красный бархат"</a> 
+                                <div class="catalog-plates__filters flex">
+                                    <div class="select select_plates">
+									   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
+									   <div class="select__field select__field_plates">Combo1</div>
+									   <ul>
+										   <li>Combo1</li>
+										   <li>Combo2</li>
+									   </ul>
+									</div>
+                                    <div>
+										<input type="number" class="numb" id="1" value="3">
+									</div>
+                                    <div class="catalog-plates__price">1090 р</div>
+                                </div>
+                                <div class="flex">
+                                    <a href="#" class="catalog-plates__button button button_blue">в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="catalog-plates__plate-wr">
+                        <div class="catalog-plates__plate">
+                            <a href="#" class="catalog-plates__photo">
+                            	<div class="catalog-plates__composition">
+                            		<div class="catalog-plates__composition-caption">Состав:</div>
+                            		<div>Сочетание нежного бархатного бисквита с добавлением свекольного сока и сырного крема</div>
+                            	</div>
+                            </a>
+                            <div class="catalog-plates__info">
+                                <a href="#" class="catalog-plates__name">Торт "Красный бархат"</a> 
+                                <div class="catalog-plates__filters flex">
+                                    <div class="select select_plates">
+									   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
+									   <div class="select__field select__field_plates">Combo1</div>
+									   <ul>
+										   <li>Combo1</li>
+										   <li>Combo2</li>
+									   </ul>
+									</div>
+                                    <div>
+										<input type="number" class="numb" id="1" value="3">
+									</div>
+                                    <div class="catalog-plates__price">1090 р</div>
+                                </div>
+                                <div class="flex">
+                                    <a href="#" class="catalog-plates__button button button_blue">в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="catalog-plates__plate-wr">
+                        <div class="catalog-plates__plate">
+                            <a href="#" class="catalog-plates__photo">
+                            	<div class="catalog-plates__composition">
+                            		<div class="catalog-plates__composition-caption">Состав:</div>
+                            		<div>Сочетание нежного бархатного бисквита с добавлением свекольного сока и сырного крема</div>
+                            	</div>
+                            </a>
+                            <div class="catalog-plates__info">
+                                <a href="#" class="catalog-plates__name">Торт "Красный бархат"</a> 
+                                <div class="catalog-plates__filters flex">
+                                    <div class="select select_plates">
+									   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
+									   <div class="select__field select__field_plates">Combo1</div>
+									   <ul>
+										   <li>Combo1</li>
+										   <li>Combo2</li>
+									   </ul>
+									</div>
+                                    <div>
+										<input type="number" class="numb" id="1" value="3">
+									</div>
+                                    <div class="catalog-plates__price">1090 р</div>
+                                </div>
+                                <div class="flex">
+                                    <a href="#" class="catalog-plates__button button button_blue">в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        </div>   
     </div>
     @@include('template/footer.html')
 </body>
