--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('template/head.html')
-<body>
+<body class"home">
     @@include('template/header.html')
     @@include('template/menu.html')
     @@include('template/slider.html')
-    <div class="main-screen">
+    <div class="main-screen main-screen_home">
         <div class="wrapper">
             <div class="catalog catalog_home flex">
                 <a href="#" class="catalog__item catalog__item_pizza">
