--- a/src/card.html
+++ b/src/card.html
@@ -4,7 +4,7 @@
 <body class="card-page">
     @@include('template/header.html')
     @@include('template/menu.html')
-    <div class="main-screen">
+    <div class="main-screen main-screen_inner-page">
         <div class="wrapper">
             <ol itemscope itemtype="http://schema.org/BreadcrumbList" class="breadcrumbs">
                 <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
@@ -25,7 +25,7 @@
 				<div class="card-info flex">
 					<div class="card-info__column">
 						<div class="card-info__photo"></div>
-						<div class="card__filters flex">
+						<div class="card__filters card__filters_desktop flex">
 							<div class="select select_plates select_card">
 							   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
 							   <div class="select__field select__field_plates select__field_card">Combo1</div>
@@ -60,6 +60,20 @@
 							</div>
 						</div>
 						<div class="paragraph_remark">Рассчитывается на 100г продукта</div>
+						<div class="card__filters card__filters_mobile flex">
+							<div class="select select_plates select_card">
+							   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
+							   <div class="select__field select__field_plates select__field_card">Combo1</div>
+							   <ul>
+								   <li>Combo1</li>
+								   <li>Combo2</li>
+							   </ul>
+							</div>
+							<div class="card-info__input-number">
+								<input type="number" class="numb_card" id="1" value="3">
+							</div>
+							<div class="card__price">1090 р</div>
+						</div>
 						<div class="card-buttons flex_between">
 							<div class="card-buttons_button button button_blue ">Купить в один клик</div>
 							<div class="card-buttons_button button button_blue">Добавить в корзину</div>
