--- a/src/catalog.html
+++ b/src/catalog.html
@@ -4,7 +4,7 @@
 <body class="catalog-page">
     @@include('template/header.html')
     @@include('template/menu.html')
-    <div class="main-screen">
+    <div class="main-screen main-screen_inner-page">
         <div class="wrapper">
             <ol itemscope itemtype="http://schema.org/BreadcrumbList" class="breadcrumbs">
                 <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
