--- a/src/card.html
+++ b/src/card.html
@@ -25,20 +25,6 @@
 				<div class="card-info flex">
 					<div class="card-info__column">
 						<div class="card-info__photo"></div>
-						<div class="card__filters card__filters_desktop flex">
-							<div class="select select_plates select_card">
-							   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
-							   <div class="select__field select__field_plates select__field_card">Combo1</div>
-							   <ul>
-								   <li>Combo1</li>
-								   <li>Combo2</li>
-							   </ul>
-							</div>
-							<div class="card-info__input-number">
-								<input type="number" class="numb_card" id="1" value="3">
-							</div>
-							<div class="card__price">1090 р</div>
-						</div>
 					</div>
 					<div class="card-info__column card-info__column_text">
 						<div class="paragraph">Кусочки домашнего песочного печенья, перемешенные со вкуснейшим кремом на основе вареной сгущенки.</div>
@@ -60,7 +46,11 @@
 							</div>
 						</div>
 						<div class="paragraph_remark">Рассчитывается на 100г продукта</div>
-						<div class="card__filters card__filters_mobile flex">
+					</div>
+				</div>
+				<div class="card-info flex">
+					<div class="card-info__column">
+						<div class="card__filters flex">
 							<div class="select select_plates select_card">
 							   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
 							   <div class="select__field select__field_plates select__field_card">Combo1</div>
@@ -74,6 +64,8 @@
 							</div>
 							<div class="card__price">1090 р</div>
 						</div>
+					</div>
+					<div class="card-info__column">
 						<div class="card-buttons flex_between">
 							<div class="card-buttons_button button button_blue ">Купить в один клик</div>
 							<div class="card-buttons_button button button_blue">Добавить в корзину</div>
