almost third part

--- a/src/cart-not-authorized.html
+++ b/src/cart-not-authorized.html
@@ -62,15 +62,22 @@
 				</div>
            		<div class="cart-line_bottom flex_between">
            			<div class="bonus-banner">
-           				<div class="bonus-banner__balance">Ваш бонусный баланс: 200 баллов</div>
-           				<div class="bonus-banner__use">Использовать балы: <span id="bonus"></span></div>
-           				<div class="bonus-banner__ui-slider">
-							<div class="ui-slider ui-slider-bonus" id="slider-bonus">
-								<div class="ui-slider-range ui-corner-all ui-widget-header"></div>
-								<span tabindex="0" class="ui-slider-handle ui-slider-handle_bonus ui-corner-all ui-state-default"></span>
-							</div>
-						</div>
-          				<a href="#" class="bonus-banner__info">Дополнительная информация о бонусной программе</a>
+           				<a data-fancybox href="#login-window"  class="button button_blue bonus-banner__button">Использовать баллы</a>
+           				<div class="login-window" id="login-
+           				window">
+							<div class="login-window__caption">Авторизация</div>
+							<input class="input" type="text" placeholder="логин" required>
+							<input class="input" type="text" placeholder="пароль"  required>
+							<div class="button button_blue login-window__button">Войти</div>
+							<div class="login-window__terms">Нажимая кнопку “ВОЙТИ”, Вы соглашаетесь с условиями 
+							<a href="#">Пользовательского соглашения</a>
+          					</div>
+           				</div>
+          				<a data-fancybox href="#bonus-info" class="bonus-banner__info">Дополнительная информация о бонусной программе</a>
+          				<div class="bonus-banner__info_details" id="bonus-info">
+          					<div class="bonus-info__caption">Дополнительная информация о бонусной програме</div>
+          					<div class="bonus-info__paragraph">Дополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной програмеДополнительная информация о бонусной</div>
+          				</div>
            			</div>
            			<div class="cart-total">
            				<div class="flex">
