--- a/src/checkout.html
+++ b/src/checkout.html
@@ -23,15 +23,27 @@
             	<div class="sheet-torn_bottom sheet-torn_bottom-cart"></div>
             	<form action="">
 					<h2 class="caption">Оформление заказа</h2>
-					<div class="checkout-caption">Выберите способ получения:</div>
-					<label class="radio-wrapper">
-						<span class="radio-label radio-label_black">Заберу сам</span>
-						<input type="radio" checked="checked">
-					</label>
-					<label class="radio-wrapper">
-						<span class="radio-label radio-label_black">Привезите тортик</span>
-						<input type="radio">
-					</label>
+					<div class="checkout-delivery">
+						<div class="checkout-caption">Выберите способ получения:</div>
+						<label class="radio-wrapper radio-wrapper_address">
+							<span class="radio-label radio-label_black">Заберу сам</span>
+							<input type="radio">
+						</label>
+						<div class="checkout-delivery__address">
+							<label class="radio-wrapper">
+								<span class="radio-label radio-label_black">ул. 40 лет Октября</span>
+								<input type="radio" checked="checked">
+							</label>
+							<label class="radio-wrapper">
+								<span class="radio-label radio-label_black">ул. Индустрии 104. ЖК Каскад</span>
+								<input type="radio" checked="checked">
+							</label>
+						</div>
+						<label class="radio-wrapper radio-wrapper_delivery">
+							<span class="radio-label radio-label_black">Привезите тортик</span>
+							<input type="radio">
+						</label>
+					</div>
 					<div class="checkout-bordered">
 						<div class="checkout-bordered__columns flex">
 							<div class="checkout-bordered__column">
@@ -63,13 +75,13 @@
 									<input type="radio">
 								</label>
 							</div>
-							<div class="checkout-bordered__column">
+							<div class="checkout-bordered__column checkout-bordered__column_delivery active">
 								<div class="checkout-caption">Доставка:</div>
 								<div class="select select_checkout">
 								   <input type="hidden" name="" value="" size="40" class="" aria-required="true" aria-invalid="false">
 								   <div class="select__field select__field_plates select__field_checkout">Улица</div>
 								   <ul>
-									   <li>Воз-ан_влен</li>
+									   <li>Воз-ан-влен</li>
 									   <li>Зыбицкая</li>
 								   </ul>
 								</div>
