--- a/src/cart-not-authorized.html
+++ b/src/cart-not-authorized.html
@@ -63,13 +63,13 @@
            		<div class="cart-line_bottom flex_between">
            			<div class="bonus-banner">
            				<a data-fancybox href="#login-window"  class="button button_blue bonus-banner__button">Использовать баллы</a>
-           				<div class="login-window" id="login-window">
-           					<div class="flex">
-								<div class="login-window__caption">Авторизация</div>
+           				<div class="modal-window modal-window_login" id="login-window">
+           					<div class="modal-inner flex">
+								<div class="modal-inner__caption">Авторизация</div>
 								<input class="input" type="text" placeholder="логин" required>
 								<input class="input" type="text" placeholder="пароль"  required>
-								<div class="button button_blue login-window__button">Войти</div>
-								<div class="login-window__terms">Нажимая кнопку “ВОЙТИ”, Вы соглашаетесь с условиями 
+								<div class="button button_blue modal-inner__button">Войти</div>
+								<div class="modal-inner__terms">Нажимая кнопку “ВОЙТИ”, Вы соглашаетесь с условиями 
 								<a href="#">Пользовательского соглашения</a>
 								</div>
           					</div>
