--- a/src/checkout.html
+++ b/src/checkout.html
@@ -26,21 +26,21 @@
 					<div class="checkout-delivery">
 						<div class="checkout-caption">Выберите способ получения:</div>
 						<label class="radio-wrapper radio-wrapper_address">
-							<span class="radio-label radio-label_black">Заберу сам</span>
+							<span class="radio-label radio-label_big-black">Заберу сам</span>
 							<input type="radio">
 						</label>
 						<div class="checkout-delivery__address">
 							<label class="radio-wrapper">
-								<span class="radio-label radio-label_black">ул. 40 лет Октября</span>
+								<span class="radio-label radio-label_big-black">ул. 40 лет Октября</span>
 								<input type="radio" checked="checked">
 							</label>
 							<label class="radio-wrapper">
-								<span class="radio-label radio-label_black">ул. Индустрии 104. ЖК Каскад</span>
+								<span class="radio-label radio-label_big-black">ул. Индустрии 104. ЖК Каскад</span>
 								<input type="radio" checked="checked">
 							</label>
 						</div>
 						<label class="radio-wrapper radio-wrapper_delivery">
-							<span class="radio-label radio-label_black">Привезите тортик</span>
+							<span class="radio-label radio-label_big-black">Привезите тортик</span>
 							<input type="radio">
 						</label>
 					</div>
@@ -48,30 +48,30 @@
 						<div class="checkout-bordered__columns flex">
 							<div class="checkout-bordered__column">
 							<div class="checkout-caption">Получатель:</div>
-								<label class="input-wrapper">
+								<label class="input-wrapper input-wrapper_changed">
 									<span class="input-label">Ваше имя*</span>
 									<input class="input" type="text" required>
 								</label>
-								<label class="input-wrapper">
+								<label class="input-wrapper input-wrapper_changed">
 									<span class="input-label">Контактный телефон*</span>
 									<input class="input" type="tel" required>
 								</label>
-								<label class="input-wrapper">
+								<label class="input-wrapper input-wrapper_changed">
 									<span class="input-label">Электронная почта</span>
 									<input class="input" type="email">
 								</label>
-								<label class="input-data-wrapper input-wrapper">
+								<label class="input-data-wrapper input-wrapper_changed input-wrapper">
 									<span class="input-label">Дата/Время получаения</span>
 									<span class="input-data-label"></span>
 									<input type="text" class="input input-data" id="datepicker" placeholder="дд/мм/гг">
 								</label>
 								<div class="checkout-caption">Выберите способ оплаты:</div>
 								<label class="radio-wrapper">
-									<span class="radio-label radio-label_black">Наличными</span>
+									<span class="radio-label radio-label_big-black">Наличными</span>
 									<input type="radio" checked="checked">
 								</label>
 								<label class="radio-wrapper">
-									<span class="radio-label radio-label_black">Оплата банковской картой</span>
+									<span class="radio-label radio-label_big-black">Оплата банковской картой</span>
 									<input type="radio">
 								</label>
 							</div>
@@ -85,23 +85,25 @@
 									   <li>Зыбицкая</li>
 								   </ul>
 								</div>
-								<div class="address-inputs flex">
-									<label class="input-wrapper">
-										<span class="input-label">Дом</span>
-										<input class="input" type="text">
-									</label>
-									<label class="input-wrapper">
-										<span class="input-label">Кв/офис</span>
-										<input class="input" type="text">
-									</label>
-									<label class="input-wrapper">
-										<span class="input-label">Подъезд</span>
-										<input class="input" type="text">
-									</label>
-									<label class="input-wrapper">
-										<span class="input-label">Этаж</span>
-										<input class="input" type="text">
-									</label>
+								<div class="address-inputs-wr">
+									<div class="address-inputs flex">
+										<label class="input-wrapper input-wrapper_changed">
+											<span class="input-label">Дом</span>
+											<input class="input" type="text">
+										</label>
+										<label class="input-wrapper input-wrapper_changed">
+											<span class="input-label">Кв/офис</span>
+											<input class="input" type="text">
+										</label>
+										<label class="input-wrapper input-wrapper_changed">
+											<span class="input-label">Подъезд</span>
+											<input class="input" type="text">
+										</label>
+										<label class="input-wrapper input-wrapper_changed">
+											<span class="input-label">Этаж</span>
+											<input class="input" type="text">
+										</label>
+									</div>
 								</div>
 							</div>
 						</div>
