--- a/src/account-history.html
+++ b/src/account-history.html
@@ -23,7 +23,7 @@
 				<div class="button button_blue">История заказов</div>
 				<div class="button button_blue">Выход</div>
 			</div>
-			<div class="data-screen data-screen_account-history">
+			<div class="data-screen data-screen_account-history data-screen_2girls">
 				<h2 class="caption">История заказов</h2>
 				<div class="order-table">
 					<div class="order-table__caption flex_between">
