--- a/src/account-history.html
+++ b/src/account-history.html
@@ -49,6 +49,10 @@
          			</div>
          		</div>
          		<div class="order-table">
+         			<div class="order-table__caption flex_between">
+						<div class="order-table__number">Заказ №1234</div>
+						<div class="order-table__time">Дата заказа: 20.07.2018 20:34</div>
+					</div>
          			<div class="order-table_details flex_between">
          				<div class="order-table__lines">
 							<div class="order-table__line flex">		
@@ -68,6 +72,10 @@
          			</div>
          		</div>
          		<div class="order-table">
+         			<div class="order-table__caption flex_between">
+						<div class="order-table__number">Заказ №1234</div>
+						<div class="order-table__time">Дата заказа: 20.07.2018 20:34</div>
+					</div>
          			<div class="order-table_details flex_between">
          				<div class="order-table__lines">
 							<div class="order-table__line flex">
