--- a/src/cakes.html
+++ b/src/cakes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('template/head.html')
-<body class="account-page account-history-page">
+<body class="cakes-page">
     @@include('template/header.html')
     @@include('template/menu.html')
     <div class="main-screen main-screen_inner-page">
@@ -26,7 +26,63 @@
 			</div>
 			<div class="data-screen data-screen_account-history data-screen_2girls">
 				<h2 class="caption">Заказать торт</h2>
-				
+				<div class="sweets flex">
+					<div class="sweets__item-wr">
+						<div class="sweets__item">
+							<div class="sweets__name">Тортик
+							«С Новым Годом!»
+							</div>
+						</div>
+					</div>
+					<div class="sweets__item-wr">
+						<div class="sweets__item">
+							<div class="sweets__name">Тортик
+							«С Новым Годом!»
+							</div>
+						</div>
+					</div>
+					<div class="sweets__item-wr">
+						<div class="sweets__item">
+							<div class="sweets__name">Тортик
+							«С Новым Годом!»
+							</div>
+						</div>
+					</div>
+					<div class="sweets__item-wr">
+						<div class="sweets__item">
+							<div class="sweets__name">Тортик
+							«С Новым Годом!»
+							</div>
+						</div>
+					</div>
+					<div class="sweets__item-wr">
+						<div class="sweets__item">
+							<div class="sweets__name">Тортик
+							«С Новым Годом!»
+							</div>
+						</div>
+					</div>
+					<div class="sweets__item-wr">
+						<div class="sweets__item">
+							<div class="sweets__name">Тортик
+							«С Новым Годом!»
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+  			<div class="pagination">
+				<nav class="pagination-list flex" role="navigation">
+					<a class='page-numbers page-numbers_first' href='#'><<</a>
+					<a class='page-numbers page-numbers_prev' href='#'><</a>
+					<span aria-current='page' class='page-numbers current'>1</span>
+					<a class='page-numbers' href='#'>2</a>
+					<a class='page-numbers' href='#'>3</a>
+					<a class='page-numbers' href='#'>4</a>
+					<a class='page-numbers' href='#'>5</a>
+					<a class='page-numbers page-numbers_next' href='#'>></a>
+					<a class='page-numbers page-numbers_last' href='#'>>></a>
+				</nav> 
 			</div>
    		</div>
     </div>
