--- a/src/bonus.html
+++ b/src/bonus.html
@@ -28,13 +28,48 @@
            				<div class="modal-window modal-window_bonus-login" id="bonus-login-window">
            					<div class="modal-inner flex">
 								<div class="modal-inner__caption">Регистрация</div>
-								<input class="input" type="text" placeholder="Ваш телефон - Ваш логин" required>
-								<label class="input-wrapper">
+								<div class="modal-inner__client-type flex_between">
+									<div class="button button_blue modal-inner__button modal-inner__client-company">Зарегистироваться как юр. лицо</div>
+									<div class="button button_blue modal-inner__button modal-inner__client-individual">Зарегистироваться как физ. лицо</div>
+								</div>
+								<input class="input input_individual" type="text" placeholder="Ваш телефон - Ваш логин" required>
+								<label class="input-wrapper input_company">
 									<span class="input-label">Введите ИНН организации</span>
 									<input class="input" type="text">
 								</label>
 								<div class="button button_blue modal-inner__button">Получить пароль</div>
 								<input class="input" type="text" placeholder="Код из СМС - Ваш пароль" required>
+								<div class="flex_between">
+									<a data-fancybox href="#login-window" class="modal-inner__link">Авторизация</a>
+									<div class="modal-window modal-window_login" id="login-window">
+										<div class="modal-inner flex">
+											<div class="modal-inner__caption">Авторизация</div>
+											<input class="input" type="text" placeholder="логин" required>
+											<input class="input" type="text" placeholder="пароль"  required>
+											<div class="button button_blue modal-inner__button">Войти</div>
+											<div class="modal-inner__terms">Нажимая кнопку “ВОЙТИ”, Вы соглашаетесь с условиями 
+											<a href="#">Пользовательского соглашения</a>
+											</div>
+										</div>
+									</div>
+									<a data-fancybox href="#password-window" class="modal-inner__link">Забыли пароль?</a>
+									<div class="modal-window modal-window_password" id="password-window">
+										<div class="modal-inner flex">
+											<div class="modal-inner__caption">Восстановление пароля</div>
+											<input class="input" type="text" placeholder="Код из СМС" required>
+											<input class="input" type="text" placeholder="Новый пароль"  required>
+											<input class="input" type="text" placeholder="Повторить новый пароль"  required>
+											<div class="flex_between">
+												<a data-fancybox href="#login-window" class="modal-inner__link">Авторизация</a>
+												<a data-fancybox href="#password-window" class="modal-inner__link">Забыли пароль?</a>
+											</div>
+											<div class="button button_blue modal-inner__button">Изменить</div>
+											<div class="modal-inner__terms">Нажимая кнопку “ИЗМЕНИТЬ”, Вы соглашаетесь с условиями
+											<a href="#">Пользовательского соглашения</a>
+											</div>
+										</div>
+									</div>
+								</div>
 								<div class="button button_blue modal-inner__button">Зарегистрироваться</div>
 								<div class="modal-inner__terms">Нажимая кнопку “ЗАРЕГИСТРИРОВАТЬСЯ”, Вы соглашаетесь с условиями 
 								<a href="#">Пользовательского соглашения</a>
