--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('template/head.html')
-<body class"home-page">
+<body class="home-page">
     @@include('template/header.html')
     @@include('template/menu.html')
     @@include('template/slider.html')
