--- a/src/checkout.html
+++ b/src/checkout.html
@@ -137,6 +137,22 @@
          				</div>
          			</div>
           		</form>
+          		<a data-fancybox href="#success-window"  class="button button_blue">Успех</a>
+				<div class="modal-window modal-window_success" id="success-window">
+					<div class="modal-inner flex">
+						<div class="modal-inner__icon modal-inner__icon_success"></div>
+						<div class="modal-inner__caption">Поздравляем!</div>
+						<div class="modal-inner__after-caption">Вам удалось сделать заказ!</div>
+					</div>
+				</div>
+           		<a data-fancybox href="#error-window"  class="button button_blue">Неуспех</a>
+				<div class="modal-window modal-window_error" id="error-window">
+					<div class="modal-inner flex">
+						<div class="modal-inner__icon modal-inner__icon_error"></div>
+						<div class="modal-inner__caption">Что-то пошло не так...</div>
+						<div class="modal-inner__after-caption">Попробуйте снова!</div>
+					</div>
+				</div>
             </div>
         </div>   
     </div>
