--- a/src/card.html
+++ b/src/card.html
@@ -83,6 +83,13 @@
 						</div>
 						<div class="button button_blue button_card">Вернуться назад</div>
 					</div>
+					<a data-fancybox href="#success-window"  class="button button_blue">Успех</a>
+					<div class="modal-window modal-window_success" id="success-window">
+						<div class="modal-inner flex">
+							<div class="modal-inner__icon modal-inner__icon_success"></div>
+							<div class="modal-inner__after-caption">Поздравляем! Товар успешно добавлен в корзину!</div>
+						</div>
+					</div>
 				</div>
             </div>
         </div>   
