--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                 </a>
                 <a href="#" class="catalog__item catalog__item_pie">
                     <div class="catalog__caption">Пироги</div>
-                    <img class="catalog__img" src="images/catalog/fruit-895005_1920.png" alt="Пироги">
+                    <img class="catalog__img" src="images/catalog/pie.png" alt="Пироги">
                 </a>
                 <a href="#" class="catalog__item catalog__item_cakes">
                     <div class="catalog__caption">Торты в ассортименте</div>
@@ -27,7 +27,7 @@
                 </a>
                 <a href="#" class="catalog__item catalog__item_bakery">
                     <div class="catalog__caption">Вкусная выпечка</div>
-                    <img class="catalog__img" src="images/catalog/basket-2816374_1920.png" alt="выпечка">
+                    <img class="catalog__img" src="images/catalog/basket.png" alt="выпечка">
                 </a>
                 <a href="#" class="catalog__item catalog__item_sweet">
                     <div class="catalog__caption">Сладенькое</div>
@@ -35,7 +35,7 @@
                 </a>
                 <a href="#" class="catalog__item catalog__item_mini">
                     <div class="catalog__caption">Мини-версии</div>
-                    <img class="catalog__img" src="images/catalog/cupcake-2724786_1920.png" alt="Мини-версии">
+                    <img class="catalog__img" src="images/catalog/cupcake.png" alt="Мини-версии">
                 </a>
                 <a href="#" class="catalog__item catalog__item_candy">
                     <div class="catalog__caption">Candy bar</div>
